<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="323dp"
        android:layout_height="40dp"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="116dp"
        android:layout_height="66dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        android:layout_width="116dp"
        android:layout_height="66dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <Button
        android:id="@+id/equalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal_sign"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/clear"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />

    <TextView
        android:id="@+id/textViewAdditionRes"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewAddition"
        app:layout_constraintStart_toStartOf="@+id/textViewAddition"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddition"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewAddition"
        android:layout_width="89dp"
        android:layout_height="26dp"
        android:text="@string/addition"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/textViewSubtractionRes"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewSubtraction"
        app:layout_constraintStart_toStartOf="@+id/textViewSubtraction"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubtraction"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewSubtraction"
        android:layout_width="89dp"
        android:layout_height="26dp"
        android:text="@string/subtraction"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMultiplicationRes"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewMultiplication"
        app:layout_constraintStart_toStartOf="@+id/textViewMultiplication"
        app:layout_constraintTop_toBottomOf="@+id/textViewMultiplication"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewMultiplication"
        android:layout_width="89dp"
        android:layout_height="26dp"
        android:text="@string/multiplication"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687" />

    <TextView
        android:id="@+id/textViewDivisionRes"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewDivision"
        app:layout_constraintStart_toStartOf="@+id/textViewDivision"
        app:layout_constraintTop_toBottomOf="@+id/textViewDivision"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewDivision"
        android:layout_width="89dp"
        android:layout_height="26dp"
        android:text="@string/division"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685" />

</androidx.constraintlayout.widget.ConstraintLayout>